--- a/docs/route/sbi_route.yaml
+++ b/docs/route/sbi_route.yaml
@@ -440,7 +440,7 @@ paths:
           schema:
             type: array
             items:
-              $ref: '#/definitions/SbiNqa'
+              type: string
       responses:
         201:
           description: OK
