update sbi yaml and code for vxlan
update sbi yaml and code for vxlan change connectionId to be required in SbiVxlanNetModel

SDNO-1302

Change-Id: I2ca8dfc9a0196f09226c7dae5dffda5aa5cb884b
Signed-off-by: yuhao10 <yuhao10@huawei.com>

--- a/docs/vxlan/sbi_vxlan.yaml
+++ b/docs/vxlan/sbi_vxlan.yaml
@@ -211,6 +211,7 @@ definitions:
       - type: object
         required:
           - deviceId
+          - connectionId
         properties:
           deviceId:
             type: string
