modify yaml and models of ipsec
SDNO-1367

Change-Id: Id0c6605a1026625587275efd81aec8093938d28f
Signed-off-by: ZhangYunChao <zhangyunchao@huawei.com>

--- a/docs/ipsec/nbi_ipsec.yaml
+++ b/docs/ipsec/nbi_ipsec.yaml
@@ -257,7 +257,10 @@ definitions:
           description: boolean(true,false)
         regionId:
           type: string
-        
+        srcPortIp:
+          type: string  
+        destPortIp:
+          type: string
   NbiActionModel:
     type: object
     description: action model
