modify yaml and models of ipsec
SDNO-1367

Change-Id: I7f855eb72ba552e9f3ff61dd244e0476c2561384
Signed-off-by: ZhangYunChao <zhangyunchao@huawei.com>

--- a/docs/ipsec/nbi_ipsec.yaml
+++ b/docs/ipsec/nbi_ipsec.yaml
@@ -213,10 +213,10 @@ definitions:
           format: uuid
         srcNeRole:
           type: string
-          description: localcpe,cloudcpe,vpc
+          description: localcpe,cloudcpe,vpc,dc-r
         destNeRole:
           type: string
-          description: localcpe,cloudcpe,vpc
+          description: localcpe,cloudcpe,vpc,dc-r
         type:
           type: string
           description: ipsec,ipv6_over_ipv4,ipv4_over_ipv6
