Change the request type of deleting policy routes
Change the request type of deleting policy routes to the string list.

SDNO-1374

Change-Id: I9daf24f8bf740f857bd95a499238c9fd1f80d18e
Signed-off-by: chuwei <chuwei@huawei.com>

--- a/docs/route/sbi_route.yaml
+++ b/docs/route/sbi_route.yaml
@@ -281,14 +281,14 @@ paths:
           description: device Id
           required: true
           type: string
-        - name: sbiRoutes
+        - name: routeIds
           in: body
-          description: policy routes info
+          description: external id list of policy routes
           required: true
           schema:
             type: array
             items:
-              $ref: '#/definitions/SbiNePolicyRoute'
+              type: string
       responses:
         201:
           description: OK
