Add some fields of overlay model
contains change model,im and dm file, and yaml file

SDNO-1170

Change-Id: If68ce9090da69184618838eb75bc6128fa42d0a3
Signed-off-by: wangweihua <wangweihua2@huawei.com>

--- a/docs/overlay/nbi_overlay.yaml
+++ b/docs/overlay/nbi_overlay.yaml
@@ -591,8 +591,17 @@ definitions:
           type: array
           items:
             type: string
+        subnets:
+          description: uuid list of LAN subnets
+          type: array
+          items:
+            type: string
+        vpnDescriptor:
+          type: string
+          description: vpn template name
         regionId:
           type: string
+          description: The region uuid
 
   NbiServiceConnection:
     description: service connection model
