--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,6 @@
 
     <groupId>org.openo.sdno.overlay</groupId>
     <artifactId>overlayvpnservice-root</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -35,6 +34,7 @@
         <cxf.version>3.1.6</cxf.version>
         <slf4j.version>1.6.1</slf4j.version>
         <package.name>overlayvpnservice</package.name>
+        <yamlfile.path>${basedir}/../docs/nbi_overlay.yaml</yamlfile.path>
     </properties>
 
     <modules>
